--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@apple/pkg2-demo",
+  "name": "orange-pkg2-demo",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "apple-demo-pkg1": "file:../pkg1"
+    "apple-demo-pkg1": "^1.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
