--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "publish": "lerna publish"
+  },
   "devDependencies": {
     "lerna": "^4.0.0",
     "prettier": "^2.5.1"
