--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -10,5 +10,6 @@
     "demo"
   ],
   "author": "orangeyyy",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "4b92beed133a29ce1720bd2f3c513a0098c69b46"
 }
